refactor: Member-API docs 수정 [AIR-138]

--- a/aircnc/docs/asciidoc/api/Member-API.adoc
+++ b/aircnc/docs/asciidoc/api/Member-API.adoc
@@ -5,11 +5,11 @@
 
 === 회원 가입
 
-operation::/member-controller-test/회원가입_api/[snippets='http-request,http-response,response-body,response-fields']
+operation::/member-controller-test/회원가입_api/[snippets='http-request,request-fields,http-response,response-fields']
 
 === 로그인
 
-operation::/member-controller-test/로그인_api/[snippets='http-request,http-response,response-body,response-fields']
+operation::/member-controller-test/로그인_api/[snippets='http-request,request-fields,http-response,response-fields']
 
 === 정보 조회
 
