feat: RoomController와 HostRoomController에 대한 RestDocs 변경 [AIR-52]

--- a/aircnc/docs/asciidoc/index.adoc
+++ b/aircnc/docs/asciidoc/index.adoc
@@ -9,5 +9,6 @@
 
 include::overview.adoc[]
 include::api/Member-API.adoc[]
+include::api/HostRoom-API.adoc[]
 include::api/Room-API.adoc[]
 include::api/Trip-API.adoc[]
