--- a/aircnc/docs/asciidoc/api/Room-API.adoc
+++ b/aircnc/docs/asciidoc/api/Room-API.adoc
@@ -1,24 +1,7 @@
-[[HOST-ROOM-API]]
-== 호스트 숙소 API
+[[ROOM-API]]
+== 숙소 API
 
 '''
+=== 숙소 목록 조회
 
-모든 호스트 숙소 API 에는 인증 토큰이 필요합니다.
-
-operation::/trip-controller-test/여행_예약_성공/[snippets='http-request,request-fields,http-response,response-fields']
-
-=== 숙소 등록
-
-operation::/room-controller-test/숙소_등록_api/[snippets='request-parameters,request-parts,http-response,response-fields']
-
-=== 숙소 변경
-
-operation::/room-controller-test/숙소_변경/[snippets='http-request,request-fields,http-response,response-fields']
-
-=== 숙소 삭제
-
-operation::/room-controller-test/숙소_삭제/[snippets='http-request,http-response']
-
-=== 호스트 숙소 조회
-
-operation::/room-controller-test/호스트_자신의_숙소_조회/[snippets='http-request,http-response,response-fields'']
+operation::/room-controller-test/모든_숙소_조회/[snippets='http-request,http-response,response-fields']
