feature: 숙소 상세 조회 RestDocs 추가

--- a/aircnc/docs/asciidoc/api/Room-API.adoc
+++ b/aircnc/docs/asciidoc/api/Room-API.adoc
@@ -5,3 +5,7 @@
 === 숙소 목록 조회
 
 operation::/room-controller-test/모든_숙소_조회/[snippets='http-request,http-response,response-fields']
+
+=== 숙소 상세 조회
+
+operation::/room-controller-test/숙소_상세_조회/[snippets='http-request,http-response,response-fields']
